--- a/app/views/payment/new.html.erb
+++ b/app/views/payment/new.html.erb
@@ -3,12 +3,14 @@
     <div id="active_admin_content" class="without_sidebar">
   <div id="main_content_wrapper" >
      <div id="main_content">
-
-           <div class="panel">
+       <div class="hidden" id="gateway_data"></div>
+       <div class = "errors" id="cc_payment_errors"></div>
+       <div class="panel">
               <div>
                  <div>
                    <%= render 'layouts/myssp_group_data' %>
-                    <table id="payment_table">
+                   <div id="payment_form"></div>
+                   <table id="payment_table">
                         <h3>Enter the payment details below.</h3>
                         <tr>
                            <td><%= r.label "Select payment date" %></td>
@@ -90,10 +92,39 @@
                     </tr>
 
                    </table>
+                   </div>
                  </div>
               </div>
            </div>
         <% end %>
      </div>
+<div id="confirmation_step">
+  <h1>Payment Successfully Processed</h1>
+  <div class="form">
+    <p>Your payment has been successfully processed. Please print a copy of this page for your records. If
+      you have any questions, don't hesitate to call Meghan Osborn at 916-488-6441.</p>
+    <table id="final_confirmation_table">
+      <tr><td>Your Name</td><td><%= @group.liaison.name %></td></tr>
+      <tr><td>Your Email</td><td><%= @group.liaison.email1 %></td></tr>
+      <tr><td>Your Cell Phone</td><td><%= @group.liaison.cell_phone %></td></tr>
+      <tr><td>Your Home Phone</td><td><%= @group.liaison.home_phone %></td></tr>
+      <tr><td>Your Work Phone</td><td><%= @group.liaison.work_phone %></td></tr>
+      <tr></tr>
+      <tr><td>Your Church</td><td><%= @group.liaison.church.name %></td></tr>
+      <tr><td>City</td><td><%= @group.liaison.church.city %></td></tr>
+      <tr><td>State</td><td><%= @group.liaison.church.state %></td></tr>
+      <tr></tr>
+    </table>
+    <div class="clear"></div>
+  </div>
+  <div class="button_container">
+    <div class="reg_button center ">
+      <img class="print_button" id="print_ninth" >
+      <%=  link_to image_tag("return.png", :alt => ":return"), :back, :class=>"return_button",
+                   :title => 'Return to liaison page' %>
+    </div>
+  </div>
+</div>
+
   </div>
 </div>
