New Church Report

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -34,7 +34,7 @@
                   <li><%= link_to "Spending Report", spending_by_site_report_path%></li>
                   <li><%= link_to "Participant Summary: CSV", part_sum_csv_path(:format => :csv)%></li>
                   <li><%= link_to "Missing Churches: CSV", missing_churches_csv_path(:format => :csv)%></li>
-                  <li><%= link_to "New Churches: CSV", missing_churches_csv_path(:format => :csv)%></li>
+                  <li><%= link_to "New Churches: CSV", new_churches_csv_path(:format => :csv)%></li>
                 </ul>
             </li>
             <li class="has_nested" ><a href="#">Budgets</a>
