Added routine to reset reg and scheduled group flags. Added filters to request page. Changed comments column type in scheduled groups to text.

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -22,6 +22,8 @@
                                   lock_out_path %></li>
                   <li><%= link_to "Unblock non-admin users",
                                   unlock_path %></li>
+                  <li><%= link_to "Update Flags",
+                                  update_flags_path %></li>
                 </ul>
              </li>
              <li class="has_nested" ><a href="#">Reports</a>
