--- a/app/views/registration/schedule.html.erb
+++ b/app/views/registration/schedule.html.erb
@@ -31,6 +31,10 @@
                       <th>Total</th>
                       <td><%= @registration.requested_total %></td>
                     </tr>
+                    <tr>
+                      <th>Comments</th>
+                      <td><%= @registration.comments %></td>
+                    </tr>
                   </table>
 
                 </div>
