Finished all of auto scheduling functions

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -24,6 +24,8 @@
                                   unlock_path %></li>
                   <li><%= link_to "Update Flags",
                                   update_flags_path %></li>
+                  <li><%= link_to "Auto Schedule",
+                                  auto_schedule_path %></li>
                 </ul>
              </li>
              <li class="has_nested" ><a href="#">Reports</a>
