Add schedule summary report.

--- a/app/views/application/auto_schedule.html.erb
+++ b/app/views/application/auto_schedule.html.erb
@@ -43,6 +43,8 @@
                     <%= link_to "Rollback Junior High Schedule", rollback_junior_schedule_path %>
                     <br>
                     <%= link_to "Update Request Values", update_requests_path %>
+                    <br>
+                    <%= link_to "Report Results", report_results_path %>
 
                 <% end %>
             </div>
