Added mass email notification for schedules. Corrected bug in schedule report.

--- a/app/views/application/auto_schedule.html.erb
+++ b/app/views/application/auto_schedule.html.erb
@@ -45,6 +45,8 @@
                     <%= link_to "Update Request Values", update_requests_path %>
                     <br>
                     <%= link_to "Report Results", report_results_path %>
+                    <br>
+                    <%= link_to "Send confirming emails", send_emails_path %>
 
                 <% end %>
             </div>
