Put notice about system shutdown on logon page.

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,6 +8,11 @@
           <h2>Welcome to the SSP Information Center. <%= link_to "Please sign in.", new_admin_user_session_path%></h2>
       <% end %>
       <br>
+      <h2>Important Notice</h2>
+      <p>The MySSP liaison portal is currently unavailable as we complete the group scheduling and notification process. We expect to be
+      back up and online by Wednesday, November 28. All liaisons will receive an email notification when this occurs. If you are from
+      a new church wishing to enroll in SSP, please call our office at 916-488-6441 and speak with Meghan Osborn.</p>
+
       <p>This application is intended for the sole use of SSP employees and client groups. Any other use is prohibited.</p>
 
     </div>
