--- a/app/views/registration/new-preregistration-version.html.erb
+++ b/app/views/registration/new-preregistration-version.html.erb
@@ -1,11 +1,11 @@
+<!--This is version of new used prior to November 15 and the scheduling of groups.-->
 <%= stylesheet_link_tag "print", :media => "print" %>
-<!--This version of 'new' is used for registering and scheduling groups after Nov 15. -->
 <div id='active_admin_content'>
     <div id='register_header'>
         <h4><%= link_to "Help with scheduling a group", "http://www.sierraserviceproject.org/2013/MySSP Registration User Guide.pdf" %></h4>
-        <img id="available_link" class="reg_buttons available_button">
+        <img id="request_link" class="reg_buttons popular_button">
         <div class="clear"></div>
-        <div class="hidden" id="available_data"></div>
+        <div class="hidden" id="request_data"></div>
         <h3>This online system has been set up for your convenience. If you run into problems, refer to the user guide
           accessible through the 'Help' link above. Also, don't hesitate to pick up the phone and call Meghan at 916-488-6441 
           during normal business hours. Alternatively, send her an email at <%= mail_to "meghan.osborn@sierraserviceproject.org",
@@ -66,11 +66,40 @@
             <div class="clear"></div>
 
             <div id="third_step">
+              <h1>Step 3: Enter Enrollment Numbers</h1>
+                    <div class="form">
+                        <div id='limit_info'></div>
+                    <table id="info_table_third" class="registration_table"></table>
+                    <table class='registration_table'>
+                    <tr>
+                        <td><%= r.label "Youth" %></td>
+                        <td><%= r.number_field :requested_youth, :min => 1, :size => 2, :max => 25 %></td>
+                    </tr>
+                    <tr>
+                        <td><%= r.label "Counselors" %></td>
+                        <td><%= r.number_field :requested_counselors, :min => 1, :size => 2, :max => 8 %></td>
+                    </tr>
+                     <tr>
+                        <td>Total Requested</td>
+                        <td id="requested_total"></td>
+                  </table>
+              </div>
+              <div class="clear"></div>
+              <div class = "errors" id="error_text_numbers"></div>
+              <div class="button_container">
+                <img class="reg_button next_button" id="submit_third" align="right">
+                <%=  link_to image_tag("cancel.png", :alt => "Cancel"), :back, :html => {:class=>"cancel_button",
+                    :title => 'Cancel and return to liaison page'} %>
+                <img class="reg_button back_button" id="back_third" >
+              </div>
+            </div>
+            <div class="clear"></div>
 
-              <h1>Step 3: Select Site and Session</h1>
+            <div id="fourth_step">
+              <h1>Step 4: Select First Choice Site and Session</h1>
               <div class="form">
                 <div id='site_info'></div>
-                <table id="info_table_third" class="registration_table"></table>
+                <table id="info_table_fourth" class="registration_table"></table>
                 <table>
 
               <tr>
@@ -83,49 +112,59 @@
               </tr>
               </table>
                 </div>
-              <h3 id="session_name" class align="center"></h3>
                 <div class="clear"></div>
               <div class = "errors" id="error_text_selections"></div>
               <div class="button_container">
-                <img class="reg_button next_button" id="submit_third" align="right" >
+                <img class="reg_button next_button" id="submit_fourth" align="right" >
                 <%=  link_to image_tag("cancel.png", :alt => "Cancel"), :back, :html => {:class=>"cancel_button",
                      :title => 'Cancel and return to liaison page'} %>
-                <img class="reg_button back_button" id="back_third" >
+                <img class="reg_button back_button" id="back_fourth" >
               </div>
             </div>
                 <div class="clear"></div>
-            <div id="fourth_step">
-            <h1>Step 4: Number of Participants</h1>
-            <div class="form">
-            <div id='limit_info'></div>
-            <table id="info_table_fourth" class="registration_table"></table>
-            <table class='registration_table'>
-            <tr>
-            <td><%= r.label "Youth" %></td>
-            <td><%= r.number_field :requested_youth, :min => 1, :size => 2, :max => 25 %></td>
-            </tr>
-            <tr>
-            <td><%= r.label "Counselors" %></td>
-            <td><%= r.number_field :requested_counselors, :min => 1, :size => 2, :max => 8 %></td>
-            </tr>
-            <tr>
-            <td>Total Requested</td>
-            <td id="requested_total"></td>
-            </table>
-            </div>
-            <div class="clear"></div>
-            <div class = "errors" id="error_text_numbers"></div>
-            <div class="button_container">
-            <img class="reg_button next_button" id="submit_fourth" align="right">
-            <%=  link_to image_tag("cancel.png", :alt => "Cancel"), :back, :html => {:class=>"cancel_button",
-                                                                                     :title => 'Cancel and return to liaison page'} %>
-            <img class="reg_button back_button" id="back_fourth" >
-            </div>
-            </div>
-            <div class="clear"></div>
 
-              <div id="fifth_step">
-              <h1>Step 5: Add Comments and Special Notes</h1>
+            <div id="fifth_step">
+              <h1>Step 5: Select Additional Choices</h1>
+              <div class="form">
+                  <p>We strongly urge you to select at least two alternative site/session combinations. Although we do
+                    our absolute best to schedule you at your first choice site and week, due to the popularity of
+                    certain times and locations, it is not always possible. Please give us at least two other choices!</p>
+
+                <div id='alt_site_info'></div>
+
+                <table id="prev_choices_table5"></table>
+                <h4>Add Your Next Choice</h4>
+                <table id="choices_table">
+                  <tr>
+                    <td><%= r.label "Site" %></td>
+                    <td id="alt_site_selector"></td>
+                  </tr>
+                  <tr id="alt_session_select"  >
+                    <td><%= r.label "Session" %></td>
+                    <td id="alt_session_selector"></td>
+                  </tr>
+                </table>
+                <p>Once you have selected an alternative choice, click "Record Choice" to save the selection.</p>
+                <br>
+                <p>To redo your choices, use the "Back" button.</p>
+                <br>
+              </div>
+              <div class="clear"></div>
+              <div class = "errors" id="error_text_alt_selections"></div>
+
+              <div class="button_container">
+                <img class="reg_button no_more_choices_button" id="submit_fifth" align="right" >
+                <img class="reg_button add_choice_button" id="add_choice" align="right" >
+                <%=  link_to image_tag("cancel.png", :alt => "Cancel"), :back, :html => {:class=>"cancel_button",
+                     :title => 'Cancel and return to liaison page'} %>
+                <img class="reg_button back_button" id="back_fifth" >
+              </div>
+            </div>
+              <div class="clear"></div>
+
+
+              <div id="sixth_step">
+              <h1>Step 6: Add Comments and Special Notes</h1>
                 <table id="prev_choices_table6"></table>
                 <div class="form">
                   <p>Do you have any special requirements or requests that we should know about? Do
@@ -133,18 +172,20 @@
                   <p>Please let us know if there is a scholarship need for the entire group or for just a specific
                     number of youth. Scholarships will be applied to the second and final payments.</p>
                   <%=  r.text_area("comments", :size => "80x4") %>
+                <p>To add additional choices, use the "Back" button to return to the previous page.</p>
+                <br>
                 </div>
                 <div class="clear"></div>
                 <div class="button_container">
-                  <img class="reg_button next_button" id="submit_fifth" align="right" >
+                  <img class="reg_button next_button" id="submit_sixth" align="right" >
                   <%=  link_to image_tag("cancel.png", :alt => "Cancel"), :back, :html => {:class=>"cancel_button",
                        :title => 'Cancel and return to liaison page'} %>
-                  <img class="reg_button back_button" id="back_fifth" >
+                  <img class="reg_button back_button" id="back_sixth" >
                 </div>
                 <div class="clear"></div>
               </div>
-            <div id="sixth_step">
-              <h1>Step 6: Confirm Registration</h1>
+            <div id="seventh_step">
+              <h1>Step 7: Confirm Registration</h1>
                 <div class="form">
                   <p>Please review this information for accuracy. Use the Back button below if you want to change anything
                     before submitting. Once you press the 'Confirm' button, your application will be recorded in our database.
@@ -166,22 +207,26 @@
                 </div>
               <div class="clear"></div>
                 <div class="button_container">
-                  <img class="reg_button confirm_button" id="submit_sixth" align="right" >
+                  <img class="reg_button confirm_button" id="submit_seventh" align="right" >
                   <%=  link_to image_tag("cancel.png", :alt => "Cancel"), :back, :html => {:class=>"cancel_button",
                        :title => 'Cancel and return to liaison page'} %>
-                  <img class="reg_button back_button" id="back_sixth" >
+                  <img class="reg_button back_button" id="back_seventh" >
                 </div>
               </div>
             <div class="clear"></div>
 
 
-            <div id="seventh_step">
-              <h1>Step 7: Make Payment</h1>
-              <div class="hidden" id="step_six_data"></div>
+            <div id="eighth_step">
+              <h1>Step 8: Make Payment</h1>
+              <div class="hidden" id="step_seven_data"></div>
               <div class="form">
                   <h4>You have two options to make your deposit payment.</h4>
                   <h4>Option One: You may proceed to SSP's secure payment gateway and use a credit or debit
                     card to complete your deposit payment. SSP does not record or save your credit card information.</h4>
+                  <!--<h3>The payment gateway is not working.</h3>-->
+                  <!--<h4>Unfortunately, we have run into an unexpected problem with the payment gateway.-->
+                  <!--If you would like to pay by credit card, go ahead and select the 'pay by check' option here. Call the office-->
+                  <!--and we will process your payment over the phone.  We apologize for the inconvenience.</h4>-->
                 <div class="clear"></div>
                 <div class="button_container">
                   <img class="reg_button gateway_button" id="pay_by_cc" align="right"  >
@@ -199,8 +244,8 @@
             </div>
             <div class="clear"></div>
 
-            <div id="eighth_step">
-              <h1>Step 8: Registration Complete!</h1>
+            <div id="ninth_step">
+              <h1>Step 9: Registration Complete!</h1>
               <div class="form">
                 <p>Congratulations! You have successfully completed your group's registration. Please print
                   a copy of this screen for your records.  You will receive an email confirmation shortly. If
@@ -221,7 +266,7 @@
               </div>
               <div class="button_container">
                   <div class="reg_button center ">
-                    <img class="print_button" id="print_eighth" >
+                    <img class="print_button" id="print_ninth" >
                     <%=  link_to image_tag("return.png", :alt => ":return"), :back, :class=>"return_button",
                                                                                              :title => 'Return to liaison page' %>
                   </div>
@@ -278,6 +323,8 @@
               <div id="progress_text">0% Complete</div>
             </div>
             </div>
+          <!--</form>-->
         <% end %>
-
+        <!--</div>-->
+</div>
 
