--- a/app/views/registration/_limit_info.html.erb
+++ b/app/views/registration/_limit_info.html.erb
@@ -1,4 +1,5 @@
-<p><%= @limit_text %></p>
+<h3><%= @limit_text %></h3>
 <input type = "hidden" name="group_limit" value="<%= @limit %>" />
 <input type = "hidden" name="site_text" value="<%= @site_text %>" />
 <input type = "hidden" name="group_type_name" value="<%= @group_type_name %>" />
+<input type = "hidden" name="session_name" value="<%= @session_name %>" />
