--- a/app/assets/stylesheets/registration.css
+++ b/app/assets/stylesheets/registration.css
@@ -28,7 +28,7 @@ input[type="submit"]:focus, input[type="button"]:focus {
     vertical-align: middle;
 }
 #available_data td.junior-high {
-    background-color: #ff2525;
+    background-color: #fffdb9;
 }
 #reg_container {
     /*background: url('container.png') no-repeat;*/
