Migration of Session

--- a/app/views/registration/_availability_matrix.html.erb
+++ b/app/views/registration/_availability_matrix.html.erb
@@ -33,4 +33,4 @@
   </tr>
   </tbody>
 </table>
-<p>Junior high sessions are highlighted in red.</p>
+<p>Junior high sessions are highlighted in yellow.</p>
