Troubleshooting comments problem and cc routing problem.

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -40,7 +40,7 @@
                   <li><%= link_to "Purchases with Unaccounted $", unaccounted_report_path%></li>
                   <li><%= link_to "Spending Report", spending_by_site_report_path%></li>
                   <li><%= link_to "Participant Summary: CSV", part_sum_csv_path(:format => :csv)%></li>
-                  <li><%= link_to "Missing Churches: CSV", missing_churches_csv_path(:format => :csv)%></li>
+                  <li><%= link_to "Year-to-Year: CSV", missing_churches_csv_path(:format => :csv)%></li>
                   <li><%= link_to "New Churches: CSV", new_churches_csv_path(:format => :csv)%></li>
                 </ul>
             </li>
