More changes to handle credit card payments.

--- a/app/views/user_mailer/cc_payment_confirmation.text.erb
+++ b/app/views/user_mailer/cc_payment_confirmation.text.erb
@@ -2,7 +2,7 @@
 
 Dear <%= @group.liaison.first_name %>,
 
-A credit card payment was a processed for your group today:
+A credit card payment was processed for your group today:
 
 Payment method:             <%=  @payment.payment_method %>
 Payment type:               <%=  @payment.payment_type %>
