--- a/app/views/user_mailer/payment_confirmation.text.erb
+++ b/app/views/user_mailer/payment_confirmation.text.erb
@@ -2,7 +2,7 @@
 
 Dear <%= @group.liaison.first_name %>,
 
-A payment was a processed for your group today:
+A payment was processed for your group today:
 
 Payment method:             <%=  @params[:payment][:payment_method] %>
 Payment type:               <%=  @params[:payment][:payment_type] %>
