--- a/app/views/payment/new.html.erb
+++ b/app/views/payment/new.html.erb
@@ -5,10 +5,10 @@
      <div id="main_content">
        <div class="hidden" id="gateway_data"></div>
        <div class = "errors" id="cc_payment_errors"></div>
-       <div class="panel">
+       <div class="panel" id="main_data">
               <div>
                  <div>
-                   <%= render 'layouts/myssp_group_data' %>
+                   <div id="group_data"><%= render 'layouts/myssp_group_data' %></div>
                    <div id="payment_form"></div>
                    <table id="payment_table">
                         <h3>Enter the payment details below.</h3>
@@ -24,6 +24,10 @@
                            <td><%= r.label "Select payment method" %></td>
                            <td id="payment_method"><%= r.select(:payment_method, options_for_select(@payment_methods, @payment.payment_method)) %></td>
                         </tr>
+                        <tr>
+                          <td><%= r.label "Payment Notes" %></td>
+                          <td id="payment_notes"><%= r.text_field :payment_notes %></td>
+                        </tr>
                       </table >
                       <table id="cash_check_section">
                         <tbody>
@@ -31,10 +35,7 @@
                               <td><%= r.label "Amount Received (please omit dollar sign)" %></td>
                               <td><%= r.number_field :payment_amount, :as => :number, :value => sprintf('%.2f', @payment.payment_amount) %></td>
                             </tr>
-                            <tr>
-                              <td><%= r.label "Payment Notes" %></td>
-                              <td id="payment_notes"><%= r.text_field :payment_notes %></td>
-                            </tr>
+
 
                             <tr><td><div class="actions">
                               <%= r.submit "Submit", :id => "cash_check_submit" %>
@@ -77,10 +78,6 @@
                             <td><span><input type="number" size="2" name="card-expiry-month" class="card-expiry-month"/>
                               <input type="number" size="4" name="card-expiry-year" class="card-expiry-year"/></span></td>
                           </tr>
-                          <tr>
-                            <td><label>Payment Comments</label></td>
-                            <td><%=  text_area :payment, :payment_notes, :cols => 30, :rows => 4 %></td>
-                          </tr>
                         </tbody>
                         <input type = "hidden" name="group_id" value= <%= @group.id %> />
                         <input type = "hidden" name="group_status" value= <%= @group_status %> />
@@ -99,27 +96,29 @@
         <% end %>
      </div>
 <div id="confirmation_step">
-  <h1>Payment Successfully Processed</h1>
+  <h2 align="center" >Payment Successfully Processed</h2>
   <div class="form">
-    <p>Your payment has been successfully processed. Please print a copy of this page for your records. If
+    <p align="center">Your credit card payment has been successfully processed and a receipt has been emailed to you. If
       you have any questions, don't hesitate to call Meghan Osborn at 916-488-6441.</p>
-    <table id="final_confirmation_table">
-      <tr><td>Your Name</td><td><%= @group.liaison.name %></td></tr>
-      <tr><td>Your Email</td><td><%= @group.liaison.email1 %></td></tr>
-      <tr><td>Your Cell Phone</td><td><%= @group.liaison.cell_phone %></td></tr>
-      <tr><td>Your Home Phone</td><td><%= @group.liaison.home_phone %></td></tr>
-      <tr><td>Your Work Phone</td><td><%= @group.liaison.work_phone %></td></tr>
-      <tr></tr>
-      <tr><td>Your Church</td><td><%= @group.liaison.church.name %></td></tr>
-      <tr><td>City</td><td><%= @group.liaison.church.city %></td></tr>
-      <tr><td>State</td><td><%= @group.liaison.church.state %></td></tr>
-      <tr></tr>
-    </table>
+    <!--<table id="final_confirmation_table">-->
+      <!--<tr><td>Your Name</td><td><%= @group.liaison.name %></td></tr>-->
+      <!--<tr><td>Your Email</td><td><%= @group.liaison.email1 %></td></tr>-->
+      <!--<tr><td>Your Cell Phone</td><td><%= @group.liaison.cell_phone %></td></tr>-->
+      <!--<tr><td>Your Home Phone</td><td><%= @group.liaison.home_phone %></td></tr>-->
+      <!--<tr><td>Your Work Phone</td><td><%= @group.liaison.work_phone %></td></tr>-->
+      <!--<tr></tr>-->
+      <!--<tr><td>Your Church</td><td><%= @group.liaison.church.name %></td></tr>-->
+      <!--<tr><td>City</td><td><%= @group.liaison.church.city %></td></tr>-->
+      <!--<tr><td>State</td><td><%= @group.liaison.church.state %></td></tr>-->
+      <!--<tr></tr>-->
+
+    <!--</table>-->
     <div class="clear"></div>
   </div>
+  <br>
   <div class="button_container">
     <div class="reg_button center ">
-      <img class="print_button" id="print_ninth" >
+      <!--<img class="print_button" id="print_ninth" >-->
       <%=  link_to image_tag("return.png", :alt => ":return"), :back, :class=>"return_button",
                    :title => 'Return to liaison page' %>
     </div>
